Fixed placeholders and aligned form label with select menu and input fields and textarea tags - Some fields have texts that doesn’t seem like “placeholders”: You need to manually delete the texts instead of able to replace the text as you start typing. (e.g. Course Data > Custom Statics page, Over This and Expected fields.) - All label tags are aligned with corresponding input/select/textarea tags

--- a/style.css
+++ b/style.css
@@ -219,29 +219,78 @@ footer {
  *         Form Properties          *
  ***********************************/
 #custom_stat, #generate_report, #enter_data, #upload_report, #create_account, #task_stream {
-  padding: 2%;
+  padding: 2%; /*  */
 }
 
+/*#custom_stat .class-info form,
+#generate_report .class-info form,*/
+#custom_stat form,
+#generate_report form,
+#enter_data form,
+#create_account form,
 #task_stream form {
     display: table;
 }
+
+/*#custom_stat .class-info input, #custom_stat select, #custom_stat label,
+#generate_report .class-info input, #generate_report select, #generate_report label,*/
+#custom_stat input, #custom_stat select, #custom_stat label,
+#generate_report input, #generate_report select, #generate_report label,
+#enter_data input, #enter_data select, #enter_data label,
+#create_account input, #create_account select, #create_account label,
 #task_stream input, #task_stream select, #task_stream label {
   display: table-cell;
   margin: 3px;
 }
 
+/*#custom_stat .class-info label,
+#generate_report .class-info label,*/
+#custom_stat label,
+#generate_report label,
+#enter_data label,
+#create_account label,
 #task_stream label {
-    text-align: left;
+  text-align: left; /* Keep the label tags aligned to the left */
+  /*padding-right: 20px; /* Add more spacing between label tags and select/input/textarea tags*/*/
 }
 
+#enter_data label,
+#create_account label {
+  padding-right: 20px; /* Add more spacing between label tags and select/input/textarea tags*/
+}
+
+/*#custom_stat .class-info p,
+#generate_report .class-info p,*/
+#custom_stat p,
+#generate_report p,
+#enter_data p,
+#create_account p,
 #task_stream p {
-  display: table-row;
+  display: table-row; /* Align items within specified p tags*/
 }
 
-#custom_stat button, #generate_report button, #enter_data button, #create_account button, #task_stream button {
+#custom_stat button,
+#generate_report button,
+#enter_data button,
+#create_account button,
+#task_stream button {
   margin-top: 20px;
 }
 
-/************************************
- *  *
- ***********************************/
+#generate_report button {
+  margin-right: 15px;
+}
+
+#custom_stat .class-info h4,
+#generate_report .class-info h4 {
+  margin-bottom: 20px; /* Add more spacing between the h4 tag and form items */
+}
+
+.textarea-label {
+  vertical-align: middle; /* Center align the label tag with textarea tag */
+}
+
+#enter_data textarea {
+  width:  172px; /* Right align textarea tag with input (and select) tag(s) */
+  margin-left: 3px; /* Left align textarea tag with input (and select) tag(s) */
+}
